Small edits, making sure I'm connected to the repo.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>paperbot-landing-page-clone</title>
+    <link rel="stylesheet" href="stylesheets/main.css">
 </head>
 <body>
     <p>Hello Team!</p>
