--- a/index.html
+++ b/index.html
@@ -1,12 +1,51 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>paperbot-landing-page-clone</title>
-    <link rel="stylesheet" href="stylesheets/main.css">
-</head>
-<body>
-    <p>Hello Team!</p>
-    <p>Emma Odia</p>
-    <p>Matthew Pineda</p>
-</body>
+<!doctype html>
+<html class="no-js" lang="">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="x-ua-compatible" content="ie=edge">
+        <title>paperbot-landing-page-clone</title>
+        <meta name="description" content="Paperbot is a chatbot that helps slack users keep their top curated  content organized into a neat and searchable library. Never miss a link again! Sign in for free.">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <link rel="apple-touch-icon" href="apple-touch-icon.png">
+        <!-- Place favicon.ico in the root directory -->
+
+        <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="css/main.css">
+        <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+    </head>
+    <body>
+        <!--[if lt IE 8]>
+            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+        <![endif]-->
+
+        <!-- Add your site or application content here -->
+        <ul>
+          <li>Blog</li>
+          <li>iOS</li>
+          <li>Android</li>
+          <li>Login</li>
+          <li>Add to Slack</li>
+        </ul>
+        <h1>Your team's knowledge is endless. So are your slack channels.</h1>
+        <p>Paperbot collects and organizes your most valuable content shared on Slack. Never miss another link again!</p>
+        <p><a href="https://app.paperbot.ai/auth/slack?source=add_bot">Add to Slack</a>
+        <!-- Picture line here -->
+        <!-- Black Diagonal Lines here -->
+
+        <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
+        <script src="js/plugins.js"></script>
+        <script src="js/main.js"></script>
+
+        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+        <script>
+            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+            e.src='https://www.google-analytics.com/analytics.js';
+            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+            ga('create','UA-XXXXX-X','auto');ga('send','pageview');
+        </script>
+    </body>
 </html>
