Updated page content | Placed anchor tags in p tags, added dud links | Completed never miss another link section

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </ul>
         <h1>Your team's knowledge is endless. So are your slack channels.</h1>
         <p>Paperbot collects and organizes your most valuable content shared on Slack. Never miss another link again!</p>
-        <p><a href="https://app.paperbot.ai/auth/slack?source=add_bot">Add to Slack</a>
+        <p><a href="#">Add to Slack</a></p>
         <!-- Picture line here -->
         <img src="http://paperbot.ai/assets/img/macbook_2x.fb2e6b.png"/>
         <!-- Black Diagonal Lines here -->
@@ -68,13 +68,13 @@
 		-->
 
 		<p>Automagically collect and categorize shared links from your Slack channels.</p>
-		<a href="#">Learn more</a>
+		<p><a href="#">Learn more</a></p>
 
 		<!-- Section: Email Digest -->
 
 		<h3>Email Digest</h3>
 		<p>Opt in to get a summary of the top content shared on your channels straight into your inbox.</p>
-		<a href="#">Learn More</a>
+		<p><a href="#">Learn More</a></p>
 
 		<!--
 		<img src="http://paperbot.ai/assets/img/email.ae0399.jpg">
@@ -88,13 +88,13 @@
 
 		<h3>Web App</h3>
 		<p>Keep your best Slack resources together in a beautifully crafted webapp</p>
-		<a href="#">Learn More</a>
+		<p><a href="#">Learn More</a></p>
 
 		<!-- Section: Mobile Apps -->
 
 		<h3>Mobile Apps</h3>
 		<p>Access your links from anywhere with our iOS and Android apps</p>
-		<a href="#">Learn More</a>
+		<p><a href="#">Learn More</a></p>
 
 		<!--
 		<img src="http://paperbot.ai/assets/img/iphone.90e4cd.png">
@@ -108,7 +108,7 @@
 
 		<h3>Rich Search</h3>
 		<p>Quickly find any content by date, name, keyword or channel with a powerful search tool</p>
-		<a href="#">Learn More</a>
+		<p><a href="#">Learn More</a></p>
 
 		<!-- Section: And More -->
 
@@ -139,22 +139,31 @@
 		<p>Eliminate distractions and keep focused on what matters</p>
 
 		<!-- Section: Never Miss Another Link Again -->
+		<h1>Never miss another link again.</h1>
+		<!--Second row -->
+		<p>Paperbot organizes the most relevant links shared on your Slack channels, 
+		so you can stay informed but not overwhelmed.</p>
+		<!-- Third row -->
+		<p><a href="#">Add to Slack</a></p>
 		
 		<!-- Section: Footer -->
+		<!-- First Row -->
 		<h3>Learn More</h3>
-		<p>Blog</p>
-		<p>Login</p>
-		
 		<h3>Company</h3>
-		<p>About us</p>
-		<p>Contact us</p>
-		
 		<h3>Resources</h3>
+		<h3>Follow Us</h3>
+		
+		<!-- Second Row -->
+		<p>Blog</p>
+		<p>About us</p>
 		<p>Help</p>
+		
+		<!-- Third Row -->
+		<p>Login</p>
+		<p>Contact us</p>
 		<p>Privacy Policy</p>
 		
-		<h3>Follow Us</h3>
-        
+		<!-- Fourth row -->
         <p>Search powered by algolia</p>
         <p>&copy;2017 Paperbot - made with by skore.io</p>
         
