added stylesheets, js, and content for carousel

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="owlcarousel/owl.carousel.min.css">
+	<link rel="stylesheet" href="owlcarousel/owl.theme.default.min.css">
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
     <body>
@@ -40,6 +42,34 @@
         <h2>Thousands of teams already use Paperbot</h2>
 
         <!-- Carousel Here -->
+	    
+	<div class="owl-carousel owl-theme">
+		
+			<div><img src="http://paperbot.ai/assets/img/clients/buffer.2f068c.png"></div>
+			<div><img src="http://paperbot.ai/assets/img/clients/salesforce.68c7b4.png"></div>
+			<div><img src="http://paperbot.ai/assets/img/clients/paypal.46fe28.png"></div>
+			<div><img src="http://paperbot.ai/assets/img/clients/giphy.efd562.png"></div>
+			<div><img src="http://paperbot.ai/assets/img/clients/adobe.6d643f.png"></div>
+			<div><img src="http://paperbot.ai/assets/img/clients/wayra.26a0a8.png"></div>
+			<div><img src="http://paperbot.ai/assets/img/clients/tnw.ecc6cf.png"/></div>
+			<div><img src="http://paperbot.ai/assets/img/clients/techstars.65b766.png"/></div>
+			<div><img src="http://paperbot.ai/assets/img/clients/hubspot.3bbab4.png"/></div>
+			<div><img src="http://paperbot.ai/assets/img/clients/catchafire.949e5b.png"/></div>
+			<div><img src="http://paperbot.ai/assets/img/clients/hootsuite.674c6e.png"/></div>
+			<div><img src="http://paperbot.ai/assets/img/clients/ibm.95c7e3.png"/></div>
+			<div><img src="http://paperbot.ai/assets/img/clients/accenture.8dc20d.svg"/></div>
+			<div><img src="http://paperbot.ai/assets/img/clients/symantec.7e4d81.png"/></div>
+			<div><img src="http://paperbot.ai/assets/img/clients/vodafone.6ecbb7.png"/></div>
+			<div><img src="http://paperbot.ai/assets/img/clients/volkswage.0f3dea.png"/></div>
+			<div><img src="http://paperbot.ai/assets/img/clients/microsoft.355b87.png"/></div>
+			<div><img src="http://paperbot.ai/assets/img/clients/ge.56b983.png"/></div>
+			<div><img src="http://paperbot.ai/assets/img/clients/heineken.7269fa.png"/></div>
+			<div><img src="http://paperbot.ai/assets/img/clients/starbucks.17cf3c.png"/></div>
+			<div><img src="http://paperbot.ai/assets/img/clients/adobe.6d643f.png"/></div>
+			<div><img src="http://paperbot.ai/assets/img/clients/giphy.efd562.png"/></div>
+			<div><img src="http://paperbot.ai/assets/img/clients/paypal.46fe28.png"/></div>
+			
+	</div>
 
         <!-- Section: How it works -->
         <svg class="divider" preserveAspectRadio="none" viewbox="0 0 1080 46">
@@ -144,6 +174,8 @@
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
+	<script src="jquery.min.js"></script>
+	<script src="owlcarousel/owl.carousel.min.js"></script>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
