--- a/index.html
+++ b/index.html
@@ -206,6 +206,9 @@
 		<!-- Fourth row -->
         <p>Search powered by algolia</p>
         <p>&copy;2017 Paperbot - made with by skore.io</p>
+        
+        <!-- Fifth row -->
+        <p>Not created by, affiliated with, or supported by Slack Technologies, Inc.</p>
 
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
