--- a/index.html
+++ b/index.html
@@ -189,25 +189,31 @@
 		<!-- Section: Footer -->
 		<!-- First Row -->
 		<h3>Learn More</h3>
-		<h3>Company</h3>
-		<h3>Resources</h3>
-		<h3>Follow Us</h3>
-
-		<!-- Second Row -->
 		<p>Blog</p>
+		<p>Login</p>
+	
+		
+		
+		<!-- Second Row -->
+		<h3>Company</h3>
 		<p>About us</p>
-		<p>Help</p>
+		<p>Contact us</p>
+		
 
 		<!-- Third Row -->
-		<p>Login</p>
-		<p>Contact us</p>
+		<h3>Resources</h3>
+		
+		<p>Help</p>
 		<p>Privacy Policy</p>
 
 		<!-- Fourth row -->
+		<h3>Follow Us</h3>
+		
+		<!-- Fifth row-->
         <p>Search powered by algolia</p>
         <p>&copy;2017 Paperbot - made with by skore.io</p>
         
-        <!-- Fifth row -->
+        <!-- sixth row -->
         <p>Not created by, affiliated with, or supported by Slack Technologies, Inc.</p>
 
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
