Fixed comment error: Third row, AND MORE section

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 				<a href="#"><img src="http://paperbot.ai/assets/img/product-features/ai-based.56be09.svg" alt="AI based recommendations"></a>
 				<p><i>AI-based Recommendations</i></p>
 				<p>Get the most relevant content especially curated for you</p>
-				<!Second Column-->
+				<!--Second Column-->
 				<a href="#"><img src="http://paperbot.ai/assets/img/product-features/focus-display.8ab44a.svg" alt="focus display"></a>
 				<p><i>Focus Display</i></p>
 				<p>Eliminate distractions and keep focused on what matters</p>
