updated carousel image tags and added styles.css

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="owlcarousel/owl.carousel.min.css">
 	<link rel="stylesheet" href="owlcarousel/owl.theme.default.min.css">
+	<link rel="stylesheet" href="css/styles.css">
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
     <body>
@@ -58,29 +59,29 @@
         <!-- Carousel Here -->
 		<section id="carousel">
 			<div class="owl-carousel owl-theme">
-				<div><img src="http://paperbot.ai/assets/img/clients/buffer.2f068c.png"></div>
-				<div><img src="http://paperbot.ai/assets/img/clients/salesforce.68c7b4.png"></div>
-				<div><img src="http://paperbot.ai/assets/img/clients/paypal.46fe28.png"></div>
-				<div><img src="http://paperbot.ai/assets/img/clients/giphy.efd562.png"></div>
-				<div><img src="http://paperbot.ai/assets/img/clients/adobe.6d643f.png"></div>
-				<div><img src="http://paperbot.ai/assets/img/clients/wayra.26a0a8.png"></div>
-				<div><img src="http://paperbot.ai/assets/img/clients/tnw.ecc6cf.png"/></div>
-				<div><img src="http://paperbot.ai/assets/img/clients/techstars.65b766.png"/></div>
-				<div><img src="http://paperbot.ai/assets/img/clients/hubspot.3bbab4.png"/></div>
-				<div><img src="http://paperbot.ai/assets/img/clients/catchafire.949e5b.png"/></div>
-				<div><img src="http://paperbot.ai/assets/img/clients/hootsuite.674c6e.png"/></div>
-				<div><img src="http://paperbot.ai/assets/img/clients/ibm.95c7e3.png"/></div>
-				<div><img src="http://paperbot.ai/assets/img/clients/accenture.8dc20d.svg"/></div>
-				<div><img src="http://paperbot.ai/assets/img/clients/symantec.7e4d81.png"/></div>
-				<div><img src="http://paperbot.ai/assets/img/clients/vodafone.6ecbb7.png"/></div>
-				<div><img src="http://paperbot.ai/assets/img/clients/volkswage.0f3dea.png"/></div>
-				<div><img src="http://paperbot.ai/assets/img/clients/microsoft.355b87.png"/></div>
-				<div><img src="http://paperbot.ai/assets/img/clients/ge.56b983.png"/></div>
-				<div><img src="http://paperbot.ai/assets/img/clients/heineken.7269fa.png"/></div>
-				<div><img src="http://paperbot.ai/assets/img/clients/starbucks.17cf3c.png"/></div>
-				<div><img src="http://paperbot.ai/assets/img/clients/adobe.6d643f.png"/></div>
-				<div><img src="http://paperbot.ai/assets/img/clients/giphy.efd562.png"/></div>
-				<div><img src="http://paperbot.ai/assets/img/clients/paypal.46fe28.png"/></div>
+				<div><img class="logo-flat" src="http://paperbot.ai/assets/img/clients/buffer.2f068c.png" alt="buffer"></div>
+				<div><img class="logo-flat" src="http://paperbot.ai/assets/img/clients/salesforce.68c7b4.png" alt="salesforce"></div>
+				<div><img class="logo-flat" src="http://paperbot.ai/assets/img/clients/paypal.46fe28.png" alt="paypal"></div>
+				<div><img class="logo-flat" src="http://paperbot.ai/assets/img/clients/giphy.efd562.png" alt="giphy"></div>
+				<div><img class="logo-flat" src="http://paperbot.ai/assets/img/clients/adobe.6d643f.png" alt="adobe"></div>
+				<div><img class="logo-flat" src="http://paperbot.ai/assets/img/clients/wayra.26a0a8.png" alt="wayra"></div>
+				<div><img class="logo-flat" src="http://paperbot.ai/assets/img/clients/tnw.ecc6cf.png" alt="tnw"></div>
+				<div><img class="logo-flat" src="http://paperbot.ai/assets/img/clients/techstars.65b766.png" alt="techstars"></div>
+				<div><img class="logo-flat" src="http://paperbot.ai/assets/img/clients/hubspot.3bbab4.png" alt="hubspot"></div>
+				<div><img class="logo-flat" src="http://paperbot.ai/assets/img/clients/catchafire.949e5b.png" alt="catchafire"></div>
+				<div><img class="logo-flat" src="http://paperbot.ai/assets/img/clients/hootsuite.674c6e.png" alt="hootsuite"></div>
+				<div><img class="logo-flat" src="http://paperbot.ai/assets/img/clients/ibm.95c7e3.png" alt="ibm"></div>
+				<div><img class="logo-flat" src="http://paperbot.ai/assets/img/clients/accenture.8dc20d.svg" alt="acenture"></div>
+				<div><img class="logo-flat" src="http://paperbot.ai/assets/img/clients/symantec.7e4d81.png" alt="symantec"></div>
+				<div><img class="logo-flat" src="http://paperbot.ai/assets/img/clients/vodafone.6ecbb7.png" alt="vodafone"></div>
+				<div><img class="logo-flat" src="http://paperbot.ai/assets/img/clients/volkswage.0f3dea.png" alt="volkswage"></div>
+				<div><img class="logo-flat" src="http://paperbot.ai/assets/img/clients/microsoft.355b87.png" alt="microsoft"></div>
+				<div><img class="logo-flat" src="http://paperbot.ai/assets/img/clients/ge.56b983.png" alt="ge"></div>
+				<div><img class="logo-flat" src="http://paperbot.ai/assets/img/clients/heineken.7269fa.png" alt="heineken"></div>
+				<div><img class="logo-flat" src="http://paperbot.ai/assets/img/clients/starbucks.17cf3c.png" alt="starbucks"></div>
+				<div><img class="logo-flat" src="http://paperbot.ai/assets/img/clients/adobe.6d643f.png" alt="adobe"></div>
+				<div><img class="logo-flat" src="http://paperbot.ai/assets/img/clients/giphy.efd562.png" alt="giphy"></div>
+				<div><img class="logo-flat" src="http://paperbot.ai/assets/img/clients/paypal.46fe28.png" alt="paypal"></div>
 			</div>
 		</section>
         
