--- a/index.html
+++ b/index.html
@@ -30,25 +30,37 @@
             <img src="paperbot-logo.9aa82f.png" height="40" alt="paperbot.ai">
           </a>
 	        <ul>
-	          <li>Blog</li>
-	          <li>iOS</li>
-	          <li>Android</li>
-	          <li>Login</li>
-	          <li class="button">Add to Slack</li>
+	          <li>
+              <a class="btn" href="#">Blog</a>
+            </li>
+	          <li>
+              <a class="btn" href="#">iOS</a>
+            </li>
+	          <li>
+              <a class="btn" href="#">Android</a>
+            </li>
+	          <li>
+              <a class="btn" href="#">Login</a>
+            </li>
+	          <li
+              <a class="btn" href="#">Add to Slack</a>
+            </li>
 	        </ul>
         </nav>
 
         <section id="team">
-        	<div class="row">
+        	<div class="main-header">
+            <div class="container">
         		<!-- First Column -->
 		        <h1>Your team's knowledge is endless. So are your slack channels.</h1>
 		        <p>Paperbot collects and organizes your most valuable content shared on Slack. Never miss another link again!</p>
-		        <div class="button">
-		        	<p><a href="#">Add to Slack</a></p>
-		        </div>
+
+		        	<a class="btn btn-default" href="#" role="button">Add to Slack</a>
+
 		        <!-- Second Column: Picture line here -->
 		        <img src="http://paperbot.ai/assets/img/macbook_2x.fb2e6b.png"/>
         	</div>
+        </div>
         </section>
 
         <!-- White Diagonal Lines here -->
@@ -57,7 +69,7 @@
 	          <polygon x="0" y="0" points="0 46 1080 46 0 0"></polygon>
 	        </svg>
 		</section>
-        <h2>Thousands of teams already use Paperbot</h2>
+        <h2 class="text-center"><strong>Thousands of teams</strong>already use Paperbot</h2>
 
         <!-- Carousel Here -->
 		<section id="carousel">
