work on header styling

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
               <a class="btn" href="#">Blog</a>
             </li>
 	          <li>
-              <a class="btn" href="#">iOS</a>
+              <a class="btn" href="#" target="_blank">iOS</a>
             </li>
 	          <li>
-              <a class="btn" href="#">Android</a>
+              <a class="btn" href="#" target="_blank">Android</a>
             </li>
 	          <li>
               <a class="btn" href="#">Login</a>
@@ -69,7 +69,7 @@
 	          <polygon x="0" y="0" points="0 46 1080 46 0 0"></polygon>
 	        </svg>
 		</section>
-        <h2 class="text-center"><strong>Thousands of teams</strong>already use Paperbot</h2>
+        <h2 class="text-center"><strong>Thousands of teams</strong> already use Paperbot</h2>
 
         <!-- Carousel Here -->
 		<section id="carousel">
