created folder for images, updated 'add to Slack' buttons

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="description" content="Paperbot is a chatbot that helps slack users keep their top curated  content organized into a neat and searchable library. Never miss a link again! Sign in for free.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="apple-touch-icon" href="apple-touch-icon.png">
+        <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
         <!-- Place favicon.ico in the root directory -->
 
         <link rel="stylesheet" href="css/normalize.css">
@@ -27,7 +27,7 @@
         <nav class="header">
         	<!-- <p>Paperbot</p> -->
           <a class="navbar-brand" href="/">
-            <img src="paperbot-logo.9aa82f.png" height="40" alt="paperbot.ai">
+            <img src="images/paperbot-logo.9aa82f.png" height="40" alt="paperbot.ai">
           </a>
 	        <ul>
 	          <li>
@@ -43,7 +43,9 @@
               <a class="btn" href="#">Login</a>
             </li>
 	          <li
-              <a class="btn" href="#">Add to Slack</a>
+              <a href="#">
+                <img class="btn-slack" src="images/btn-add-to-slack.f34f4f.svg" alt="Add to Slack">
+              </a>
             </li>
 	        </ul>
         </nav>
