work on slack links, small fixes

--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
 		        <h1>Your team's knowledge is endless. So are your slack channels.</h1>
 		        <p>Paperbot collects and organizes your most valuable content shared on Slack. Never miss another link again!</p>
 
-		        	<a class="btn btn-default" href="#" role="button">Add to Slack</a>
+		        	<a href="#" >
+                <img class="btn-slack" src="images/btn-add-to-slack.f34f4f.svg" alt="Add to Slack">
+              </a>
 
 		        <!-- Second Column: Picture line here -->
 		        <img src="http://paperbot.ai/assets/img/macbook_2x.fb2e6b.png"/>
@@ -114,16 +116,16 @@
 				<h1>How it works</h1>
 			</div>
 			<div class="row">
-				<!--<img src="http://paperbot.ai/assets/img/icons/add.8252dd.svg">--><p>Add to Slack</p>
+				<img src="images/add.8252dd.svg" alt="Add"><p>Add to Slack</p>
 			</div>
 			<div class="row">
-				<!--<img src="http://paperbot.ai/assets/img/icons/chat.3102ed.svg">--><p>Invite into your channels</p>
+				<img src="images/chat.3102ed.svg"><p>Invite into your channels</p>
 			</div>
 			<div class="row">
-				<!--<img src="http://paperbot.ai/assets/img/icons/newspaper.d290b2.svg">--><p>Opt in to receive the digest</p>
+				<img src="images/newspaper.d290b2.svg"><p>Opt in to receive the digest</p>
 			</div>
 			<div class="row">
-				<!--<img src="http://paperbot.ai/assets/img/icons/tablet-and-laptop.740099.svg">--><p>View your links on the web or mobile app</p>
+				<img src="images/tablet-and-laptop.740099.svg"><p>View your links on the web or mobile app</p>
 			</div>
 		</section>
 
